--- a/images/VS2022Box/image.yml
+++ b/images/VS2022Box/image.yml
@@ -34,7 +34,7 @@
 #       the authenticated user of service principal
 
 description: Windows 11 Enterprise + M365 Apps + VS2022
-publisher: Contoso
+publisher: Aqovia
 offer: DevBox
 sku: win11-vs2022
 version: 1.0.0
