use scope subscription

--- a/.github/workflows/build_images.yml
+++ b/.github/workflows/build_images.yml
@@ -22,6 +22,7 @@ jobs:
     env:
       RESOURCE_GROUP_NAME: ivan-automation-rg
       LOCATION: westeurope
+      AZURE_SUBSCRIPTION_ID: 0f92b314-edeb-402a-8e41-88c1cfee638c
       # STORAGE_ACCOUNT: experimentdevboxstg
       # SUBNET_ID: /subscriptions/0f92b314-edeb-402a-8e41-88c1cfee638c/resourceGroups/devbox-experiment-ivan/providers/Microsoft.Network/virtualNetworks/v-net-dev-box/subnets/builders
 
@@ -29,7 +30,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Login to Azure
-        run: az login --service-principal -u ${{ secrets.AZURE_CLIENT_ID }} -p ${{ secrets.AZURE_CLIENT_SECRET }} --tenant ${{ secrets.AZURE_TENANT_ID }}
+        run: az login --service-principal -u ${{ secrets.AZURE_CLIENT_ID }} -p ${{ secrets.AZURE_CLIENT_SECRET }} --tenant ${{ secrets.AZURE_TENANT_ID }} --subscription ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
       # az cli installs bicep on demand the first time it's used
       # using the --async argument in the command below simultaniously invokes several commands that use bicep
