--- a/.github/workflows/build_images.yml
+++ b/.github/workflows/build_images.yml
@@ -41,7 +41,7 @@ jobs:
 
       - name: Deploy Resource Group
         working-directory: tools/templates
-        run: az deployment sub create --name ${{ env.RESOURCE_GROUP_NAME }} --location ${{ env.LOCATION }} --template-file ./resourceGroup.bicep --parameters resourceGroupName=${{ env.RESOURCE_GROUP_NAME }} resourceGroupLocation=${{ env.LOCATION }}
+        run: az deployment sub create --name ${{ env.RESOURCE_GROUP_NAME }} --location ${{ env.LOCATION }} --template-file ./ResourceGroup.bicep --parameters resourceGroupName=${{ env.RESOURCE_GROUP_NAME }} resourceGroupLocation=${{ env.LOCATION }}
 
       # - name: Deploy Build ACI Containers
       #   run: python "./builder/build.py" --async --repository "${{ github.repositoryUrl }}" --revision "${{ github.sha }}" --token "${{ github.token }}" --client-id "${{ secrets.AZURE_CLIENT_ID }}" --client-secret "${{ secrets.AZURE_CLIENT_SECRET }}" --storage-account "${{ env.STORAGE_ACCOUNT }}" --subnet-id "${{ env.SUBNET_ID }}"
