--- a/.github/workflows/build_images.yml
+++ b/.github/workflows/build_images.yml
@@ -39,7 +39,8 @@ jobs:
       - name: Ensure Bicep
         run: az bicep upgrade
 
-      - name: Delete Resource Group
+      - name: Try to delete Resource Group
+        if: always()
         run: az group delete --name ${{ env.RESOURCE_GROUP_NAME }} --yes
 
       - name: Deploy Resource Group
