--- a/.github/workflows/build_images.yml
+++ b/.github/workflows/build_images.yml
@@ -40,7 +40,7 @@ jobs:
         run: az bicep upgrade
 
       - name: Try to delete Resource Group
-        if: always()
+        continue-on-error: true
         run: az group delete --name ${{ env.RESOURCE_GROUP_NAME }} --yes
 
       - name: Deploy Resource Group
