--- a/.github/workflows/build_images.yml
+++ b/.github/workflows/build_images.yml
@@ -39,17 +39,17 @@ jobs:
       - name: Ensure Bicep
         run: az bicep upgrade
 
-      - name: Try to delete Resource Group
-        continue-on-error: true
-        run: az group delete --name ${{ env.RESOURCE_GROUP_NAME }} --yes
+      # - name: Try to delete Resource Group
+      #   continue-on-error: true
+      #   run: az group delete --name ${{ env.RESOURCE_GROUP_NAME }} --yes
 
-      - name: Deploy Resource Group
-        working-directory: tools/templates
-        run: az deployment sub create --name ${{ env.RESOURCE_GROUP_NAME }} --location ${{ env.LOCATION }} --template-file ResourceGroup.bicep --parameters resourceGroupName=${{ env.RESOURCE_GROUP_NAME }} resourceGroupLocation=${{ env.LOCATION }}
+      # - name: Deploy Resource Group
+      #   working-directory: tools/templates
+      #   run: az deployment sub create --name ${{ env.RESOURCE_GROUP_NAME }} --location ${{ env.LOCATION }} --template-file ResourceGroup.bicep --parameters resourceGroupName=${{ env.RESOURCE_GROUP_NAME }} resourceGroupLocation=${{ env.LOCATION }}
 
       - name: Deploy Storage Account
         working-directory: tools/templates
-        run: az storage account create --name ${{ env.RESOURCE_GROUP_NAME }} --resource-group ${{ env.RESOURCE_GROUP_NAME }} --template-file Storage.bicep --parameters storageName=${{ env.STORAGE_ACCOUNT }} location=${{ env.LOCATION }}
+        run: az storage account create --name ${{ env.STORAGE_ACCOUNT }} --resource-group ${{ env.RESOURCE_GROUP_NAME }} --template-file Storage.bicep --parameters storageName=${{ env.STORAGE_ACCOUNT }} location=${{ env.LOCATION }}
       
         # - name: Deploy Build ACI Containers
       #   run: python "./builder/build.py" --async --repository "${{ github.repositoryUrl }}" --revision "${{ github.sha }}" --token "${{ github.token }}" --client-id "${{ secrets.AZURE_CLIENT_ID }}" --client-secret "${{ secrets.AZURE_CLIENT_SECRET }}" --storage-account "${{ env.STORAGE_ACCOUNT }}" --subnet-id "${{ env.SUBNET_ID }}"
