--- a/.github/workflows/build_images.yml
+++ b/.github/workflows/build_images.yml
@@ -23,7 +23,7 @@ jobs:
       RESOURCE_GROUP_NAME: ivanautomationrg
       LOCATION: westeurope
       AZURE_SUBSCRIPTION_ID: 0f92b314-edeb-402a-8e41-88c1cfee638c
-      STORAGE_ACCOUNT: experimentdevboxstg
+      STORAGE_ACCOUNT: experimentdevboxstg1
       # SUBNET_ID: /subscriptions/0f92b314-edeb-402a-8e41-88c1cfee638c/resourceGroups/devbox-experiment-ivan/providers/Microsoft.Network/virtualNetworks/v-net-dev-box/subnets/builders
 
     steps:
