--- a/.github/workflows/build_images.yml
+++ b/.github/workflows/build_images.yml
@@ -39,13 +39,13 @@ jobs:
       - name: Ensure Bicep
         run: az bicep upgrade
 
-      # - name: Try to delete Resource Group
-      #   continue-on-error: true
-      #   run: az group delete --name ${{ env.RESOURCE_GROUP_NAME }} --yes
+      - name: Try to delete Resource Group
+        continue-on-error: true
+        run: az group delete --name ${{ env.RESOURCE_GROUP_NAME }} --yes
 
-      # - name: Deploy Resource Group
-      #   working-directory: tools/templates
-      #   run: az deployment sub create --location ${{ env.LOCATION }} --template-file ResourceGroup.bicep --parameters resourceGroupName=${{ env.RESOURCE_GROUP_NAME }} resourceGroupLocation=${{ env.LOCATION }}
+      - name: Deploy Resource Group
+        working-directory: tools/templates
+        run: az deployment sub create --location ${{ env.LOCATION }} --template-file ResourceGroup.bicep --parameters resourceGroupName=${{ env.RESOURCE_GROUP_NAME }} resourceGroupLocation=${{ env.LOCATION }}
 
       - name: Deploy Storage Account
         working-directory: tools/templates
@@ -56,3 +56,4 @@ jobs:
       
       # - name: Deploy Build ACI Containers
       #   run: python "./builder/build.py" --async --repository "${{ github.repositoryUrl }}" --revision "${{ github.sha }}" --token "${{ github.token }}" --client-id "${{ secrets.AZURE_CLIENT_ID }}" --client-secret "${{ secrets.AZURE_CLIENT_SECRET }}" --storage-account "${{ env.STORAGE_ACCOUNT }}" --subnet-id "${{ env.SUBNET_ID }}"
+
