--- a/.github/workflows/build_images.yml
+++ b/.github/workflows/build_images.yml
@@ -58,12 +58,12 @@ jobs:
           --template-file StorageAccount.bicep
           --parameters storageAccountName=${{ env.STORAGE_ACCOUNT }} location=${{ env.LOCATION }}
 
-      - name: Deploy Build Subnet
+      - name: Deploy VNET
         working-directory: tools/templates
         run: az deployment group create 
           --resource-group ${{ env.RESOURCE_GROUP_NAME }}
           --template-file Vnet.bicep
-          --parameters subnetName=builders location=${{ env.LOCATION }} name=${{ env.VNET }} 
+          --parameters location=${{ env.LOCATION }} name=${{ env.VNET }} 
       
       # - name: Deploy Build ACI Containers
       #   run: python "./builder/build.py" --async --repository "${{ github.repositoryUrl }}" --revision "${{ github.sha }}" --token "${{ github.token }}" --client-id "${{ secrets.AZURE_CLIENT_ID }}" --client-secret "${{ secrets.AZURE_CLIENT_SECRET }}" --storage-account "${{ env.STORAGE_ACCOUNT }}" --subnet-id "${{ env.SUBNET_ID }}"
