--- a/.github/workflows/build_images.yml
+++ b/.github/workflows/build_images.yml
@@ -37,8 +37,10 @@ jobs:
         run: az login --service-principal -u ${{ secrets.AZURE_CLIENT_ID }} -p ${{ secrets.AZURE_CLIENT_SECRET }} --tenant ${{ secrets.AZURE_TENANT_ID }}
           
       - name: Set Subscription to Environment Variable
-        run: export AZURE_SUBSCRIPTION_ID=$(az account show --query "id" --output tsv)
-            echo "AZURE_SUBSCRIPTION_ID=$AZURE_SUBSCRIPTION_ID" >> $GITHUB_ENV
+        run: export ID=$(az account show --query "id" --output tsv)
+          echo $ID
+          echo "AZURE_SUBSCRIPTION_ID=$ID" >> $GITHUB_ENV
+          echo ${{ env.AZURE_SUBSCRIPTION_ID }}
 
       # az cli installs bicep on demand the first time it's used
       # using the --async argument in the command below simultaniously invokes several commands that use bicep
